@@ -59,9 +59,10 @@
        Zcl_S : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
        Zcl_E : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
      Zndex_S : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
-     Zndex_E : //z 2015-06-04 16:34:01 L.210'26759 T1567341263.K ~335 +----+----+----+----+----+
-     TimeCnt : //z 2015-06-04 16:18:56 L.210'27664 T1565113339.K ~12  +----+----+----+----+----+
-     Reg.Cnt : //z 2015-06-04 16:18:43 L.210'27677 T1565113303.K ~17  +----+----+----+----+----+
+     Zndex_E : //z 2015-06-05 17:33:48 L.209'23172 T2926574811.K ~343 +----+----+----+----+----+
+     TimeCnt : //z 2015-06-05 17:33:06 L.209'23214 T2926574677.K ~13  +----+----+----+----+----+
+     Reg.Cnt : //z 2015-06-05 17:33:01 L.209'23219 T2926574672.K ~18  +----+----+----+----+----+
+     #18  R+ : //z 2015-06-05 17:33:01 L.209'23219 T2926574672.K ~18    V+.354  L+.368  
      #17  R+ : //z 2015-06-04 16:18:43 L.210'27677 T1565113303.K ~17    V+.334  L+.354  
      #16  R+ : //z 2015-05-28 17:45:17 L.217'22483 T1979531806.K ~16    V+.295  L+.337  
      #15  R+ : //z 2015-05-22 17:22:59 L.223'23821 T1570244025.K ~15    V+.273  L+.295  
@@ -80,7 +81,9 @@
      #2   R+ : //z 2015-04-27 11:31:41 L.248'44899 T1419899214.K ~2     V+.19   L+.104  
      #1   R+ : //z 2015-04-27 11:28:08 L.248'45112 T1418964727.K ~1     V+.3    L+.62   
      File.Op : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
-     Version : //z 2015-06-04 16:34:01 L.210'26759 T1567341263.K ~352   R+.17   L+.356  --+----+
+     Version : //z 2015-06-05 17:33:48 L.209'23172 T2926574811.K ~361   R+.18   L+.373  --+----+
+     #19  V+ : //z 2015-06-05 17:33:48 L.209'23172 T2926574811.K ~361   R+.18   L+.373  
+     #18  R+ : //z 2015-06-05 17:33:01 L.209'23219 T2926574672.K ~354   R+.18   L+.369  V+.354  
      #18  V+ : //z 2015-06-04 16:19:29 L.210'27631 T1565149180.K ~342   R+.17   L+.357  
      #17  R+ : //z 2015-06-04 16:18:43 L.210'27677 T1565113303.K ~334   R+.17   L+.355  V+.334  
      #17  V+ : //z 2015-05-29 16:01:55 L.216'28685 T750977912 .K ~323   R+.16   L+.347  
@@ -361,3 +364,12 @@ https://github.com/cameron314/readerwriterqueue
 http://libcds.sourceforge.net/
 http://www.codeproject.com/Articles/43510/Lock-Free-Single-Producer-Single-Consumer-Circular
 #endregion //z 2015-06-04 16:18:43 L.210'27677 BG57IV3@XCL T1565113303.K.F4146951713-+----+----+
+
+#region 06-05 17:33 R#.18   @3ds
+01. 
+//z 2015-06-05 17:33:06 L.209'23214 T2926574677.K[T13,L369,R18,V356]
+http://www.osgart.org/index.php/Using_osgExp_for_3DS_Max
+http://trac.openscenegraph.org/projects/osg//wiki/Community/Plugins
+http://sourceforge.net/p/osgmaxexp/news/
+http://sourceforge.net/p/osgmaxexp/code/HEAD/tree/
+#endregion //z 2015-06-05 17:33:01 L.209'23219 BG57IV3@XCL T2926574672.K.F4146951713-+----+----+
