@@ -8051,3 +8051,14 @@ Changes to be committed:
 	modified:   ZGame/game_tutorials/Win32/Mouse Input Part2/win_main.cpp
 	modified:   ZGame/game_tutorials/Win32/Mouse Input/win_main.cpp
 
++---------+---------+---------+---------+---------+---------+---------+---------+ 
+d.2015/06/05.17_53_43.54.K.MzM.T@WS 
+On branch master
+Your branch is up-to-date with 'origin/master'.
+
+Changes to be committed:
+  (use "git reset HEAD <file>..." to unstage)
+
+	modified:   Doc/K/T.2015.BugFree.cs
+	modified:   History.txt
+
